# mission_sequencer

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTORS.md  Instructions_to_run_waypoint_ROS-node_service.md  LICENSE  README.md  package.xml  readme.md  workspace.code-workspace
.github/ISSUE_TEMPLATE/: 1_bug_report.yaml  2_feature_request.yaml
.github/workflows/: build-ros1.yml
amaze_waypoint_following/: CMakeLists.txt
docs/: CMakeLists.txt
docs/api-docs/: CMakeLists.txt  doxyfile.in
docs/pkg-docs/: CMakeLists.txt  doxyfile.in
files/: rectangular_trajectory.csv  spiral_trajectory.csv  test_trajectory.csv
include/: parse_waypoints.hpp
include/amaze_mission_sequencer/: amaze_mission_sequencer.h  parse_waypoints.hpp
include/mission_sequencer/: mission_sequencer.hpp  parse_waypoints.hpp
include/mission_sequencer/types/: sequencer_options.hpp  sequencer_types.hpp  sequencer_waypoint.hpp
include/mission_sequencer/utils/: message_conversion.hpp  parser_ros.hpp  parser_waypoints.hpp
launch/: amaze_mission_sequencer.launch  amaze_waypoint_following.launch  mission_sequencer.launch
msg/: MissionRequest.msg  MissionResponse.msg  MissionWaypoint.msg  MissionWaypointArray.msg  MissionWaypointStamped.msg  request.msg  response.msg
src/: amaze_mission_sequencer.cpp  amaze_mission_sequencer_node.cpp  amaze_waypoint_following.cpp  mission_sequencer.cpp  mission_sequencer_node.cpp  parse_waypoints.cpp  parser_waypoints.cpp  waypoint_service.cpp  waypoint_service_client.cpp
srv/: GetStartPose.srv  wp_service.srv
trajectories/: test_trajectory.csv
