<?xml version="1.0"?>
<package format="2">
    <name>amaze_waypoint_following</name>
    <version>1.0.0</version>
    <description>The amaze_waypoint_following package</description>

    <maintainer email="christoph.boehm@aau.at">Christoph Boehm</maintainer>
    <maintainer email="beyoglu1@yahoo.com">Hikmet Beyoglu</maintainer>
    <maintainer email="christian.brommer@ieee.com">Christian Brommer</maintainer>
    <maintainer email="alessandro.fornasier@ieee.com">Alessandro Fornasier</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>mavros_msgs</build_depend>
    <build_depend>tf2</build_depend>
    <build_depend>tf2_geometry_msgs</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>mavros_msgs</build_export_depend>
    <build_export_depend>tf2</build_export_depend>
    <build_export_depend>tf2_geometry_msgs</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>mavros_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>tf2</exec_depend>
    <exec_depend>tf2_geometry_msgs</exec_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
