<?xml version="1.0"?>
<package format="2">
  <name>mission_sequencer</name>
  <version>0.1.1</version>
  <description>The mission_sequencer package: Lets the drone fly a given (through a file) path triggered by the autonomy engine.</description>

  <!-- MAINTAINERS -->
  <maintainer email="christoph.boehm@aau.at">Christoph Böhm</maintainer>
  <maintainer email="christian.brommer@ieee.com">Christian Brommer</maintainer>
  <maintainer email="alessandro.fornasier@ieee.com">Alessandro Fornasier</maintainer>
  <maintainer email="martin.scheiber@aau.at">Martin Scheiber</maintainer>

  <!-- LICENSE -->
  <license>BSD-2-Clause</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/amaze_mission_sequencer</url> -->


  <!-- AUTHORS -->
  <author email="christian.brommer@aau.at">Christian Brommer</author>
  <author email="christoph.boehm@aau.at">Christoph Böhm</author>
  <author email="alessandro.fornasier@aau.at">Alessandro Fornasier</author>
  <author email="beyoglu1@yahoo.com">Hikmet Beyoglu</author>
  <author email="roland.jung@aau.at">Roland Jung</author>
  <author email="martin.scheiber@aau.at">Martin Scheiber</author>


  <!-- DEPENDENCIES -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>mavros_msgs</depend>


  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
